# Ripple

./: .gitignore  CLAUDE.md  CMakeLists.txt  CustomScrollBar.qml  FluentComboBox.qml  GlassPanel.qml  HelpDialog.qml  Main.qml  MainPanel.qml  NotificationManager.qml  NotifyOverlay.qml  ParamCombo.qml  QuickSendEditDialog.qml  QuickSendGrid.qml  README.md  ReceivePane.qml  Ripple_Registry_Residue_Report.md  SendPane.qml  SerialPortPanel.qml  SettingsDialog.qml  StatusBar.qml  Theme.qml  find_ripple.ps1  main.cpp  requires.md
.github/workflows/: release.yml
Installer/: QIF_USAGE.md  README.md  build_installer.bat  build_installer.bat.in  deploy.bat.in  innoSetup.iss  innoSetup.iss.in
Installer/config/: config.xml  config.xml.in  controlscript.qs
help/en/: about.html  auto_log.html  quick_send.html  shortcuts.html
help/zh/: about.html  auto_log.html  quick_send.html  shortcuts.html
icon/: README.md  app.rc
qml/: Main.qml
qml/components/: CustomScrollBar.qml  FluentComboBox.qml  NotifyOverlay.qml  StatusBar.qml
qml/dialogs/: HelpDialog.qml  SettingsDialog.qml
qml/receive/: ReceivePane.qml
qml/send/: QuickSendEditDialog.qml  QuickSendGrid.qml  SendPane.qml
qml/serial/: SerialPortPanel.qml
qml/singleton/: Theme.qml
src/: appsettings.cpp  appsettings.h  logger.cpp  logger.h  receivemodel.cpp  receivemodel.h  serialportmanager.cpp  serialportmanager.h  serialworker.cpp  serialworker.h  translator.cpp  translator.h
translations/: CWY_zh_CN.ts  Ripple_zh_CN.ts
